# open-core-graph-RAG

./: .gitignore  .ollama-models.conf  ARCHITECTURE.md  DEMO_RESULTS.md  EXECUTIVE_SUMMARY.md  LICENSE  README.md  auto  auto.py  demo_webpage_extraction.py  download-models-from-config.sh  manage_models.sh  requirements.txt  setup.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docker/init/: init_db.sql
src/: __init__.py  config.py
src/api/: __init__.py
src/core/: README.md  __init__.py  graph_factory.py  graph_store.py  tiger_graph_store.py
src/extraction/: README.md  __init__.py
src/extraction/chunking/: README.md  __init__.py  base_chunker.py  semantic_chunker.py  sliding_window_chunker.py  text_chunk.py
src/extraction/ner/: README.md  __init__.py  competition.py  entity_extractor.py  entity_models.py  hybrid_extraction.py  llama_ner.py  llm_provider.py  ner_model.py
src/extraction/parsers/: README.md  __init__.py  base_parser.py  csv_parser.py  docx_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py  webpage_parser.py
src/extraction/pipeline/: README.md  __init__.py  config.py  orchestrator.py  storage.py
src/extraction/relationships/: README.md  __init__.py  competition.py  relationship_extractor.py  relationship_models.py
src/llm/: __init__.py
src/retrieval/: __init__.py
tests/: conftest.py  test_graph_store.py
tests/extraction/: __init__.py  conftest.py  test_chunking.py  test_competition.py  test_competitive_relationships.py  test_entity_discovery.py  test_hybrid_ner.py  test_ner.py  test_parsers.py  test_phase5_pipeline.py  test_relationships.py
tools/: .flake8  Makefile  README.md  auto  auto.py  pyproject.toml
